[package]
name = "slog-gelf"
version = "0.1.0"
authors = ["Gleb Pomykalov <gleb@pomykalov.ru>", "hedgar <hedgar2017@gmail.com>"]
build = "build.rs"

[dependencies]
slog = "2.4.1"
chrono = "0.4.6"
rand = "0.6.5"
serde = "1.0.92"
serde_json = "1.0.39"
flate2 = "1.0.7"

[dev-dependencies]
slog-async = "2.3.0"
hostname = "0.1.5"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
